# superinstance

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  Makefile  README.md  ROADMAP-v1.0.md  ROADMAP.md  next.config.ts  test-api.sh  worklog.md
.github/: metadata.txt
.github/workflows/: ci.yml
agent-onboarding/: CODEBASE-MAP.md  LAST-SESSION.md  PROJECT-OVERVIEW.md  README.md  RELEASE-AUDIT.md  WORK-AHEAD.md
announce/: Twitter-v1.0.md
backend/: Cargo.toml  README.md
backend/src/: discord.rs  llama_native.rs  main.rs  night_school.rs  pasture_sync.rs
docs/: game-theory-symposium.md  omnilingual-symposium.md  rd-symposium.md  worklog.md
docs/screenshots/: README.md  breeding.txt  dashboard.txt  install.txt  memory.txt
genetics/traits/: README.md
genetics/traits/creative_writer/: config.json  meta.json
genetics/traits/herd_sync_falcon/: breed.md  meta.json
pasture/cattle/template/: breed.md
prisma/: schema.prisma
scripts/: install.sh  install_jetson.sh
src/app/: layout.tsx  page.tsx
src/app/api/: route.ts
src/components/ui/: progress.tsx
src/hooks/: use-mobile.ts  use-toast.ts
src/lib/: db.ts
superinstance/: .env.example  .gitignore  Cargo.toml  Makefile  README.md  manifesto.md
superinstance/night_school/: breed.py
superinstance/scripts/: install_jetson.sh
superinstance/src/: dashboard.rs  lib.rs  main.rs  ranch.rs
superinstance/src/channels/: webhook.rs
superinstance/src/collie/: anticipation.rs  mod.rs  reflex.rs  shepherd.rs
superinstance/src/evolution/: breeding.rs  mod.rs  night_school.rs  stud_book.rs
superinstance/src/pasture/: inference.rs  lora_manager.rs  mod.rs  model_pool.rs
superinstance/src/species/: cattle.rs  chicken.rs  duck.rs  goat.rs  hog.rs  horse.rs  mod.rs  sheep.rs
superinstance/src/web/: api.rs  dashboard.rs  mod.rs
