[package]
name = "superinstance"
version = "0.1.0"
edition = "2021"
authors = ["SuperInstance Ranch"]
description = "A Ranch Ecosystem that evolves into a SuperInstance - specialized intelligences managed by a loyal Border Collie"
license = "MIT"
readme = "README.md"
keywords = ["ai", "edge", "lora", "jetson", "agents", "open-genomics"]
categories = ["science", "asynchronous"]

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "sync", "time", "fs", "io-util", "macros", "signal", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Terminal UI
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Markdown Parsing (Open Genomics)
pulldown-cmark = "0.10"
regex = "1.10"

# File Watching (Hot Reload)
notify = "6.1"
notify-debouncer-full = "0.3"

# Database (Stud Book)
rusqlite = { version = "0.30", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random for breeding
rand = "0.8"
rand_chacha = "0.3"

# Async channels
flume = "0.11"

# Memory management
parking_lot = { version = "0.12", features = ["serde"] }

# Configuration
config = "0.14"

# CPU/Thread priority (for Hogs)
thread-priority = "0.16"

# Safe tensors for LoRA
safetensors = "0.4"
ndarray = "0.15"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12", optional = true }

# HTTP client (for Ducks and API calls)
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart", "stream"] }

# Web Server (Axum for single-binary dashboard)
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# System info
sysinfo = "0.30"

# Discord Integration
[dependencies.serenity]
version = "0.12"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache", "http"]

# Telegram Integration
teloxide = { version = "0.12", features = ["rustls"], optional = true }

# URL handling
url = "2.5"

# Directory handling
directories = "5.0"

# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

# Dialoguer for onboarding CLI
dialoguer = "0.11"
console = "0.15"

[features]
default = []
gpu = []
tensorrt = []
prometheus = ["metrics-exporter-prometheus"]
telegram = ["teloxide"]
full = ["telegram", "prometheus"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bin]]
name = "superinstance"
path = "src/main.rs"

[[bin]]
name = "superinstance-onboard"
path = "src/bin/onboard.rs"
